WebUI Prefs: Fix scrolling behavior of left nav bar.
This restores the intended behavior of the left navr bar being not scrolling vertically, but allows horizontal scrolling to move it offscreen.

BUG=72313
TEST=Scroll up/down and left/right on preferences page. Left nav bar should be fixed for vertical scrolling, but move offscreen for horizontal scrolling.

Review URL: http://codereview.chromium.org/6574044

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@75998 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 1a5c6271cbbd38a51a231e6073c67f6e579ef865

--- a/chrome/browser/resources/options/options_page.css
+++ b/chrome/browser/resources/options/options_page.css
@@ -158,19 +158,19 @@ html[toolkit=views] .button-strip {
   -webkit-border-end: 1px solid #c6c9ce;
   background: -webkit-linear-gradient(rgba(234, 238, 243, 0.2), #eaeef3),
               -webkit-linear-gradient(left, #eaeef3, #eaeef3 97%, #d3d7db);
+  position: fixed;
   bottom: 0;
+  /* We set both left and right for the sake of RTL. */
   left: 0;
+  right: 0;
   top: 0;
   width: 266px;
-  position: absolute;
   z-index: 2;
 }
 
 html[dir='rtl'] #navbar-container {
   background: -webkit-linear-gradient(rgba(234, 238, 243, 0), #EAEEF3),
               -webkit-linear-gradient(right, #EAEEF3, #EAEEF3 97%, #D3D7DB);
-  left: auto;
-  right: 0;
 }
 
 html.hide-menu #navbar-container {
